tests/paczka1/small_fuzzy/68881266.err
Error in line 7: RJsH A323 -1,5
Error in line 5: RJsH A323 12,3
Error in line 8: Raf A890 9,9
Error in line 12: Raf A323 48,7
Error in line 2: QEY S939 15,8
